--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <head>
-<script type="text/javascript" src="../BrowserPrint-3.1.250.min.js"></script>
+<script type="text/javascript" src="./BrowserPrint-3.1.250.min.js"></script>
 <script type="text/javascript">
 var selected_device;
 var devices = [];
