--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ window.onload = setup;
 </head>
 <body>
 
-<span style="padding-right:50px; font-size:200%">Zebra Browser Print Test Page updated</span><br/>
+<span style="padding-right:50px; font-size:200%">Zebra Browser Print Test Page updatedd</span><br/>
 <span style="font-size:75%">This page must be loaded from a web server to function properly.</span><br><br>
 Selected Device: <select id="selected_device" onchange=onDeviceSelected(this);></select> <!--  <input type="button" value="Change" onclick="changeDevice();">--> <br/><br/> 
 <input type="button" value="Get Application Configuration" onclick="getConfig()"><br/><br/>
